--- a/Mappatura.ipynb
+++ b/Mappatura.ipynb
@@ -720,7 +720,7 @@
    "id": "c5c0f3a9",
    "metadata": {},
    "source": [
-    "### Formattazione user-firendly delle informazioni di due mss. matchati"
+    "### Presentazione dei dati dei manoscritti associati"
    ]
   },
   {
